--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   liveusb-creator-3.11.1.tar.bz2: c7af8862cdd213ce28760b2b778fc2eec4716673
-sources:
   liveusb-creator-3.11.8.tar.bz2: 49774087d7a12c9eaf442218600d5dca5b927629
+sources:
+  liveusb-creator-3.12.0.tar.bz2: b453c79b4f1ba3257f9ad26c38592bab095aa299
